--- a/src/View_Controller/Login.fxml
+++ b/src/View_Controller/Login.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.LoginScreen">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.LoginScreen">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -19,13 +19,14 @@
                   <TextField fx:id="userNameField" layoutX="57.0" layoutY="78.0" prefHeight="25.0" prefWidth="173.0" promptText="Username" />
                   <PasswordField fx:id="passwordField" layoutX="57.0" layoutY="117.0" prefHeight="25.0" prefWidth="173.0" promptText="Password" />
                   <Button fx:id="loginButton" layoutX="101.0" layoutY="193.0" mnemonicParsing="false" onAction="#onSubmit" prefHeight="33.0" prefWidth="85.0" text="Submit" />
-                  <Label layoutX="101.0" layoutY="26.0" prefHeight="33.0" prefWidth="85.0" text="Welcome!">
+                  <Label fx:id="welcomeLabel" layoutX="101.0" layoutY="26.0" prefHeight="33.0" prefWidth="85.0" text="Welcome!">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
+            <Label fx:id="locationLabel" layoutX="476.0" layoutY="14.0" prefHeight="17.0" prefWidth="110.0" />
          </children></AnchorPane>
    </children>
 </GridPane>
