--- a/src/View_Controller/Appointments.fxml
+++ b/src/View_Controller/Appointments.fxml
@@ -6,22 +6,22 @@
 
 <AnchorPane fx:id="appointmentsTab" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.Appointments">
    <children>
-      <TableView editable="true" prefHeight="800.0" prefWidth="1200.0">
+      <TableView fx:id="appointmentsTable" editable="true" prefHeight="800.0" prefWidth="1200.0">
          <columns>
-            <TableColumn prefWidth="75.0" text="Apt. ID" />
-            <TableColumn prefWidth="75.0" text="Title" />
-            <TableColumn prefWidth="75.0" text="Description" />
-            <TableColumn prefWidth="75.0" text="Location" />
-            <TableColumn prefWidth="75.0" text="Type" />
-            <TableColumn prefWidth="75.0" text="Start" />
-            <TableColumn prefWidth="75.0" text="End" />
-            <TableColumn prefWidth="75.0" text="Create Date" />
-            <TableColumn prefWidth="75.0" text="Created By" />
-            <TableColumn prefWidth="89.0" text="Last Update" />
-            <TableColumn prefWidth="82.0" text="Last Updated By" />
-            <TableColumn prefWidth="75.0" text="Customer ID" />
-            <TableColumn prefWidth="75.0" text="User ID" />
-            <TableColumn prefWidth="75.0" text="Contact ID" />
+            <TableColumn fx:id="idCol" prefWidth="75.0" text="Apt. ID" />
+            <TableColumn fx:id="titleCol" prefWidth="75.0" text="Title" />
+            <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
+            <TableColumn fx:id="locationCol" prefWidth="75.0" text="Location" />
+            <TableColumn fx:id="typeCol" prefWidth="75.0" text="Type" />
+            <TableColumn fx:id="startCol" prefWidth="75.0" text="Start" />
+            <TableColumn fx:id="endCol" prefWidth="75.0" text="End" />
+<!--            <TableColumn prefWidth="75.0" text="Create Date" />-->
+<!--            <TableColumn prefWidth="75.0" text="Created By" />-->
+<!--            <TableColumn prefWidth="89.0" text="Last Update" />-->
+<!--            <TableColumn prefWidth="82.0" text="Last Updated By" />-->
+            <TableColumn fx:id="customerIdCol" prefWidth="75.0" text="Customer ID" />
+            <TableColumn fx:id="userIdCol" prefWidth="75.0" text="User ID" />
+            <TableColumn fx:id="contactIdCol" prefWidth="75.0" text="Contact ID" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
