--- a/src/view_controller/dashboard/customers/add_customer_form.fxml
+++ b/src/view_controller/dashboard/customers/add_customer_form.fxml
@@ -1,8 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view_controller.dashboard.customers.AddCustomerForm">
-    <TextField layoutX="226.0" layoutY="164.0">TESTING</TextField>
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view_controller.dashboard.customers.AddCustomerForm">
+   <Text layoutX="189.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="New Customer" textAlignment="CENTER" underline="true" wrappingWidth="204.13671875">
+      <font>
+         <Font size="18.0" />
+      </font>
+   </Text>
+   <AnchorPane layoutX="155.0" layoutY="115.0" prefHeight="365.0" prefWidth="273.0">
+      <children>
+          <TextField fx:id="nameField" layoutX="62.0" layoutY="32.0" promptText="Name" />
+         <TextField fx:id="addressField" layoutX="62.0" layoutY="85.0" promptText="Address" />
+         <TextField fx:id="postalCodeField" layoutX="62.0" layoutY="142.0" promptText="Postal Code" />
+         <TextField fx:id="phoneField" layoutX="62.0" layoutY="192.0" promptText="Phone" />
+         <ComboBox fx:id="countryDropdown" layoutX="62.0" layoutY="250.0" prefWidth="150.0" promptText="Country" />
+         <ComboBox fx:id="divisionDropdown" layoutX="62.0" layoutY="301.0" prefWidth="150.0" promptText="State/Province" />
+      </children>
+   </AnchorPane>
+   <HBox alignment="CENTER" layoutX="191.0" layoutY="488.0" prefHeight="37.0" prefWidth="200.0">
+      <children>
+         <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitForm" text="Submit" />
+         <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#closeForm" text="Cancel" textAlignment="CENTER">
+            <HBox.margin>
+               <Insets left="20.0" />
+            </HBox.margin>
+         </Button>
+      </children>
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets>
+   </HBox>
 </AnchorPane>
