--- a/src/view_controller/dashboard/reports/reports.fxml
+++ b/src/view_controller/dashboard/reports/reports.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -65,5 +66,6 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
+      <Button fx:id="closeButton" onAction="#closeWindow" layoutX="705.0" layoutY="567.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Close" />
    </children>
 </AnchorPane>
